feat(walletconnect): WalletConnect v2 PT1 - (Pair, Sign, Send for ETH) (GROWUX-408) (#4590)
* pair (WIP)

* list sessions

* sign flow

* erc20 flow

* Add send flow for ETH, fix UI

* Add send flow for ETH, fix UI

* some log

* ktlint

* cleanup

* fix tests

* ktlint

* fix tests

* WCv2 FF

* ktlint

* FF

* fix tests

* fix tests

* small change